# neca

./: CMakeLists.txt  LICENSE  README
cmake/: FindGMP.cmake
src/: arith.h  gmp_helpers.h  main.cpp
